Cambios con typings

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     
     <script src="../node_modules/less/dist/less.js"></script>    
     <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/howler/dist/howler.js"></script>
 
     <script src="app-bundle-ts.js"></script>
 
