--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 </head>
 <body class="flex-col">
 
-    <div id="example"></div>
+    <div id="AppContainer" class="flex-1 flex-col"></div>
     
     <script src="../node_modules/less/dist/less.js"></script>    
     <script src="../node_modules/jquery/dist/jquery.js"></script>
