--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 
     
     <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" />
-    <link rel="stylesheet/less" type="text/css" href="src/less/main.less" />
+    <link rel="stylesheet/less" type="text/css" href="less/main.less" />
 
 </head>
 <body class="flex-col">
