--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
     <div id="AppContainer" class="flex-1 flex-col"></div>
     
     <script src="lib/jquery.js"></script>
+    <script src="lib/velocity.min.js"></script>
+    <script src="lib/velocity.ui.min.js"></script>
+    <script src="lib/jquery.blast.min.js"></script>
     <script src="lib/howler.js"></script>
 
     <script src="app-bundle-ts.js"></script>
